fixed the overflow

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ a{
     margin: 6rem 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .feature{
